hphp/test/slow/autoload/autoload-fail-hoist.d/autoload-fail-hoist.php.expectf
Fatal error: Undefined interface: I2 in %s/test/slow/autoload/autoload-fail-hoist.d/autoload-fail-e.inc on line 3